--- a/Frontend/public/form_account_azienda.html
+++ b/Frontend/public/form_account_azienda.html
@@ -67,10 +67,10 @@
 
                 <div class="detail-content-wrap">
                     <form id="account-form" autocomplete="off" onsubmit="return false">
-                        <!-- Anti-autofill trap (V5.9.2) -->
+                        <!-- Anti-autofill trap (V6.1.0) -->
                         <div class="anti-autofill-trap" aria-hidden="true">
-                            <input type="text" name="username" tabindex="-1" />
-                            <input type="password" name="password" tabindex="-1" />
+                            <input type="text" style="display:none" tabindex="-1">
+                            <input type="password" style="display:none" tabindex="-1">
                         </div>
 
                         <!-- 1. Dati Principali -->
@@ -98,9 +98,9 @@
                                         Email</label>
                                     <div class="glass-field border-glow">
                                         <span class="material-symbols-outlined ml-4 opacity-40">person</span>
-                                        <input id="account-username" type="text"
+                                        <input id="account-username" type="text" name="account_label"
                                             data-t-placeholder="username_placeholder" autocomplete="new-password"
-                                            spellcheck="false" class="field-input" />
+                                            autocorrect="off" spellcheck="false" class="field-input" />
                                     </div>
                                 </div>
 
@@ -120,9 +120,10 @@
                                             data-t="password">Password</label>
                                         <div class="glass-field border-glow">
                                             <span class="material-symbols-outlined ml-4 opacity-40">lock</span>
-                                            <input id="account-password" type="password" class="field-input base-shield"
+                                            <input id="account-password" type="password" name="account_secret"
+                                                class="field-input base-shield"
                                                 data-t-placeholder="password_placeholder" autocomplete="new-password"
-                                                spellcheck="false" />
+                                                autocorrect="off" spellcheck="false" />
                                             <button id="btn-toggle-password-edit" type="button"
                                                 class="btn-field-toggle">
                                                 <span class="material-symbols-outlined">visibility</span>
