--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -177,9 +177,71 @@
                     </button>
                 </div>
 
+                <!-- Preferenze Notifiche -->
+                <div class="settings-container mt-section">
+                    <h3 class="settings-desc" data-t="notifications_prefs">Preferenze Notifiche</h3>
+
+                    <div class="settings-item">
+                        <div class="row-layout">
+                            <div class="settings-icon-box icon-blue">
+                                <span class="material-symbols-outlined">notifications_active</span>
+                            </div>
+                            <div class="settings-item-info">
+                                <span class="settings-label" data-t="pref_push_label">Notifiche Push (Device)</span>
+                                <span class="settings-desc" data-t="pref_push_desc">Ricevi avvisi sul cellulare</span>
+                            </div>
+                        </div>
+                        <input type="checkbox" id="push-notify-toggle" class="settings-toggle">
+                    </div>
+
+                    <div class="settings-item">
+                        <div class="row-layout">
+                            <div class="settings-icon-box icon-emerald">
+                                <span class="material-symbols-outlined">mail</span>
+                            </div>
+                            <div class="settings-item-info">
+                                <span class="settings-label" data-t="pref_email_label">Notifiche Email</span>
+                                <span class="settings-desc" data-t="pref_email_desc">Ricevi avvisi via posta</span>
+                            </div>
+                        </div>
+                        <input type="checkbox" id="email-notify-toggle" class="settings-toggle">
+                    </div>
+                </div>
+
+                <!-- Preferenze Notifiche -->
+                <div class="settings-container mt-section">
+                    <h3 class="settings-desc" data-t="notifications_prefs">Preferenze Notifiche</h3>
+
+                    <div class="settings-item">
+                        <div class="row-layout">
+                            <div class="settings-icon-box icon-blue">
+                                <span class="material-symbols-outlined">notifications_active</span>
+                            </div>
+                            <div class="settings-item-info">
+                                <span class="settings-label" data-t="pref_push_label">Notifiche Push (Device)</span>
+                                <span class="settings-desc" data-t="pref_push_desc">Ricevi avvisi sul cellulare</span>
+                            </div>
+                        </div>
+                        <input type="checkbox" id="push-notify-toggle" class="settings-toggle">
+                    </div>
+
+                    <div class="settings-item">
+                        <div class="row-layout">
+                            <div class="settings-icon-box icon-emerald">
+                                <span class="material-symbols-outlined">mail</span>
+                            </div>
+                            <div class="settings-item-info">
+                                <span class="settings-label" data-t="pref_email_label">Notifiche Email</span>
+                                <span class="settings-desc" data-t="pref_email_desc">Ricevi avvisi via posta</span>
+                            </div>
+                        </div>
+                        <input type="checkbox" id="email-notify-toggle" class="settings-toggle">
+                    </div>
+                </div>
+
                 <!-- Sicurezza e Accesso -->
                 <div class="settings-container mt-section">
-                    <h3 class="settings-desc" data-t="section_security">Sicurezza e Accesso</h3>
+                    <h3 class="settings-desc" data-t="section_security">Sicurezza e Accesso (Face ID, 2FA)</h3>
 
                     <!-- Password -->
                     <button class="settings-item group" id="btn-change-password">
