fix(form-azienda): accordion overflow, password toggle, sedi layout uniforme
- CSS: aggiunto overflow:hidden + transition a .collapsible-section (fix campi visibili dopo chiusura card)
- CSS: aggiunto .base-shield, .btn-icon-header, utility mancanti in form_azienda.css
- CSS: fuso modifica_azienda.css in form_azienda.css, rimosso file obsoleto
- HTML: aggiunto bottone toggle password in card Amministrazione e Personale
- JS: fix toggleSection - gestisce max-height:none->0px con doppio rAF
- JS: fix btn-toggle-pass handler - cerca input via data-target + fallback closest()
- JS: fix addExtraSede - layout identico alla Sede Legale (grid 1fr/80px, icona blu, parte aperta)

--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -618,6 +618,14 @@
                                                                 data-t-placeholder="password"
                                                                 autocomplete="new-password" autocorrect="off"
                                                                 spellcheck="false" />
+                                                            <div class="detail-field-actions">
+                                                                <button type="button"
+                                                                    class="btn-toggle-pass btn-icon-header"
+                                                                    data-target="email-amministrazione-password">
+                                                                    <span
+                                                                        class="material-symbols-outlined">visibility</span>
+                                                                </button>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                     <div class="glass-field-container">
@@ -688,6 +696,14 @@
                                                                 data-t-placeholder="password"
                                                                 autocomplete="new-password" autocorrect="off"
                                                                 spellcheck="false" />
+                                                            <div class="detail-field-actions">
+                                                                <button type="button"
+                                                                    class="btn-toggle-pass btn-icon-header"
+                                                                    data-target="email-personale-password">
+                                                                    <span
+                                                                        class="material-symbols-outlined">visibility</span>
+                                                                </button>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                     <div class="glass-field-container">
