ui(dati-azienda): avvicina logo+QR, pulsante CHIUDI nel modal QR
- header-action-row: justify-content center + gap 1.5rem (era space-between)
- Modal QR: sostituita X con pulsante gradient blu con icona check e testo CHIUDI
- Aggiunti stili .btn-modal-close e .qr-scan-text in dati_azienda.css

--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -329,7 +329,8 @@
                 <div id="qrcode-zoom-container" class="qr-zoom-container"></div>
                 <p class="qr-scan-text" data-t="scan_to_import">Scansiona per importare in rubrica</p>
                 <button id="btn-close-qr" class="btn-modal-close">
-                    <span class="material-symbols-outlined">close</span>
+                    <span class="material-symbols-outlined" style="font-size:1.1rem;">check_circle</span>
+                    <span data-t="close">CHIUDI</span>
                 </button>
             </div>
         </div>
