Unificazione moduli Aggiungi/Modifica Azienda e pulizia file obsoleti (Protocollo V5.4)

--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -96,7 +96,10 @@
                                             class="material-symbols-outlined referent-avatar-placeholder">person</span>
                                     </div>
                                     <div class="referent-info">
-                                        <p id="referente-nome" class="referent-name">-</p>
+                                        <div class="flex items-center gap-1">
+                                            <p id="referente-nome" class="referent-name">-</p>
+                                            <p id="referente-cognome" class="referent-name">-</p>
+                                        </div>
                                         <p id="referente-ruolo" class="referent-role">-</p>
                                     </div>
                                     <a id="btn-call-referente" href="tel:" class="referent-call-btn">
