--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -106,6 +106,18 @@
                                     </div>
                                 </div>
 
+                                <!-- Forma Giuridica -->
+                                <div class="glass-field-container mt-4">
+                                    <label class="view-label" for="forma-giuridica" data-t="legal_form">Forma
+                                        Giuridica</label>
+                                    <div class="detail-field-box border-glow">
+                                        <span class="material-symbols-outlined icon-field-left">theater_comedy</span>
+                                        <input id="forma-giuridica" name="company_legal_form_master" type="text"
+                                            class="detail-field-input" placeholder="S.r.l., S.p.A., ecc."
+                                            data-t-placeholder="legal_form" />
+                                    </div>
+                                </div>
+
                                 <div class="form-grid-2 mt-4">
                                     <!-- Telefono -->
                                     <div class="glass-field-container">
@@ -195,12 +207,12 @@
 
                                         <div class="form-grid-responsive">
                                             <div class="glass-field-container">
-                                                <label class="view-label" for="numero-cciaa"
+                                                <label class="view-label" for="cciaa"
                                                     data-t="cciaa_number">CCIAA</label>
                                                 <div class="detail-field-box border-glow">
                                                     <span
                                                         class="material-symbols-outlined icon-field-left">fact_check</span>
-                                                    <input id="numero-cciaa" name="office_cciaa_master" type="text"
+                                                    <input id="cciaa" name="office_cciaa_master" type="text"
                                                         class="detail-field-input" placeholder="REA..."
                                                         data-t-placeholder="cciaa_placeholder"
                                                         autocomplete="new-password" autocorrect="off"
@@ -273,11 +285,11 @@
                                             accept="image/*" class="hidden" aria-label="Carica Foto Referente" />
                                         <div class="flex-1">
                                             <div class="glass-field-container">
-                                                <label class="view-label" for="referente-titolo"
+                                                <label class="view-label" for="referente-ruolo"
                                                     data-t="referent_role">Ruolo / Titolo</label>
                                                 <div class="detail-field-box border-glow">
                                                     <span class="material-symbols-outlined icon-field-left">badge</span>
-                                                    <input id="referente-titolo" name="ref_role_master" type="text"
+                                                    <input id="referente-ruolo" name="ref_role_master" type="text"
                                                         class="detail-field-input" placeholder="es. Amministratore"
                                                         data-t-placeholder="referent_role_placeholder"
                                                         autocomplete="new-password" autocorrect="off"
